--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row">
            
             <div class="image">
-                <img src="/img/pngwing.com.png" alt="about">
+                <img src="/img/about.png" alt="about">
             </div>
 
             <div class="content">
